--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,14 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
-        "typo3/cms-core": "^10.4 || ^11.5 || ^12.4 || ^13.4"
+        "php": "^8.1",
+        "typo3/cms-core": "^12.4 || ^13.4"
     },
     "require-dev": {
-        "typo3/testing-framework": "^6.16 || 7.*@dev",
-        "sbuerk/typo3-cmscomposerinstallers-testingframework-bridge": "^0.1.0",
+        "typo3/testing-framework": "^8.2.4",
         "phpspec/prophecy": "^1.16",
         "php-parallel-lint/php-parallel-lint": "^1.4",
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^10.1 || ^11.0"
     },
     "conflict": {
         "psr/container": "<1.1",
